added a few changes to visual layout

--- a/index.html
+++ b/index.html
@@ -17,12 +17,13 @@
   </style>
 </head>
 <body>
+  <img class="background" src="assets/images/background-pattern-desktop.svg">
   <div class="faqcontainer">
-    <h1 class="title">FAQs</h1>
+    <h1><img src="assets/images/icon-star.svg">FAQ</h1>
 
     <div class="question">
       <details>
-        <summary>What is Frontend Mentor, and how will it help me?</summary>
+        <summary><img src="assets/images/icon-plus.svg">What is Frontend Mentor, and how will it help me?</summary>
         <p>Frontend Mentor offers realistic coding challenges to help developers improve their 
           frontend coding skills with projects in HTML, CSS, and JavaScript. It's suitable for 
           all levels and ideal for portfolio building.</p>
@@ -31,7 +32,7 @@
 
     <div class="question">
       <details>
-        <summary>Is Frontend Mentor free?</summary>
+        <summary><img src="assets/images/icon-plus.svg">Is Frontend Mentor free?</summary>
         <p>Yes, Frontend Mentor offers both free and premium coding challenges, with the free 
           option providing access to a range of projects suitable for all skill levels.</p>
       </details>
@@ -39,7 +40,7 @@
 
     <div class="question">
       <details>
-        <summary>Can I use Frontend Mentor projects in my portfolio?</summary>
+        <summary><img src="assets/images/icon-plus.svg">Can I use Frontend Mentor projects in my portfolio?</summary>
         <p>Yes, you can use projects completed on Frontend Mentor in your portfolio. It's an excellent
           way to showcase your skills to potential employers!</p>
       </details>
@@ -47,14 +48,13 @@
 
     <div class="question">
       <details>
-        <summary>How can I get help if I'm stuck on a Frontend Mentor challenge?</summary>
+        <summary><img src="assets/images/icon-plus.svg">How can I get help if I'm stuck on a challenge?</summary>
         <p>The best place to get help is inside Frontend Mentor's Discord community. There's a help 
           channel where you can ask questions and seek support from other community members.</p>
       </details>
     </div>
   </div>
-  <br>
-  <hr>
+
 
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
