--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
   </style>
 </head>
 <body>
-  <img class="background" src="assets/images/background-pattern-desktop.svg">
+  <!--<img class="background" src="assets/images/background-pattern-desktop.svg">-->
   <div class="faqcontainer">
     <h1><img src="assets/images/icon-star.svg">FAQ</h1>
 
     <div class="question">
       <details>
-        <summary><img src="assets/images/icon-plus.svg">What is Frontend Mentor, and how will it help me?</summary>
+        <summary><img src="assets/images/icon-plus.svg" id = "images">What is Frontend Mentor, and how will it help me?</summary>
         <p>Frontend Mentor offers realistic coding challenges to help developers improve their 
           frontend coding skills with projects in HTML, CSS, and JavaScript. It's suitable for 
           all levels and ideal for portfolio building.</p>
@@ -59,5 +59,7 @@
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Jarol</a>.
   </div>
+  
+  <script src="script.js"></script>
 </body>
 </html>
